Modifications and file reorganization

--- a/01.schedule.md
+++ b/01.schedule.md
@@ -1,4 +1,4 @@
-# Detailed schedule
+# ⏰ Detailed schedule
 
 ## Before the Carnival
 
@@ -26,7 +26,7 @@
 | Oct 16 | Charge up batteries and power banks 🔋 | Fedor |
 | Oct 16, 20:00 | ➡️ Team Zoom meeting ⬅️ | **Everyone** |
 
-## October 17, Thursday, WARM-UP
+## Oct 17, Thursday, WARM-UP
 
 🗺 [Arena location for WARM-UP event](https://maps.app.goo.gl/RkufTrcQbvMn9bMF6)
 
@@ -34,7 +34,7 @@
 |--|--|--|
 | 7:00 - 9:00 | Control setup | Marina, Ariadna |
 | by 14:00 | Toilets 🚻 arrive | Rohan |
-| 14:00 - 15:00 | Arena 🎪 setup <br/> Registration tent <br/> IT team tent <br/> Commentator tent | Fedor <br/> Arena team <br/> IT team |
+| 14:00 - 15:00 | Arena 🎪 setup <br/> Registration tent <br/> IT team tent <br/> Commentator tent | Fedor, Sergei <br/> Arena team <br/> IT team |
 | 14:30 | Parking officers are ready | ? |
 | 15:00 | Event center opens 🎪 |  |
 | 16:00 - 18:00 | 📣 Commentator | Arpad |
@@ -50,7 +50,7 @@
 | 22:00 | Charge up batteries and power banks 🔋 | Fedor |
 
 
-## October 18, Friday, MASS
+## Oct 18, Friday, MASS
 
 [Arena location for MASS event](https://maps.app.goo.gl/caWZitWLByRsVxT79)
 
@@ -71,7 +71,7 @@
 | 19:21 | 🌅 Sunset | |
 | 22:00 | Charge up batteries and power banks 🔋 | Fedor |
 
-## October 19, Saturday, MIDDLE
+## Oct 19, Saturday, MIDDLE
 
 [Arena location for MIDDLE event](https://maps.app.goo.gl/2cXzt4ywia9G6Hj77)
 
@@ -88,7 +88,7 @@
 | 9:30 - 12:00 | Massage 💆‍♀️ by Physio Sport | Cassandra |
 | 12:00 | Course closure 🏁, arena relocation | |
 
-## October 19, Saturday, SPRINT
+## Oct 19, Saturday, SPRINT
 
 [Arena location for SPRINT event](https://maps.app.goo.gl/PX7dE2mznda9W7Q49)
 
@@ -106,7 +106,7 @@
 | 16:30 | Course closure 🏁 | |
 | 19:22 | 🌅 Sunset | |
 
-## October 19, Saturday, DINNER 🍾 🥂 🎉 
+## Oct 19, DINNER 🍾 🥂 🎉 
 
 at **Harmonie German Club**  
 [Location of DINNER](https://maps.app.goo.gl/xgtEq31t6cHmFTTQA) 
@@ -118,7 +118,7 @@ at **Harmonie German Club**
 | 21:45 | Dinner concludes | |
 | 22:00 | Charge up batteries and power banks 🔋 | Fedor |
 
-## October 20, Sunday, LONG
+## Oct 20, Sunday, LONG
 
 [Arena location for LONG event](https://maps.app.goo.gl/UvWwtsQ32WtoRC1T6)
 
@@ -143,7 +143,7 @@ at **Harmonie German Club**
 
 | When | What | Who |
 |--|--|--|
-| Oct 21 | Return all equipment <br/> Return 35 SIACs to Ryan Welsh, CORC <br/> Return equipment to OACT Shed | Marina + Fedor, Sergei |
+| Oct 21 | Return 35 SIACs to Ryan Welsh, CORC <br/> Return equipment to OACT shed and office | Marina + Fedor, Sergei |
 | Oct 21 | Return toilets 🚻 to [Canberra Hire](https://maps.app.goo.gl/Jau9rcGNu5fGNsbB9) | Rohan || | Thank you messages 💌 to all sponsors and partners | Marina |
 | | Thank you messages 💌 to all participants | Marina |
 | | Articles, Photos, Interviews, Results <br/> to OA, OACT, ONSW, Pedal Power, Aus Orienteer, OA news | Marina |
