--- a/02.people.md
+++ b/02.people.md
@@ -1,4 +1,4 @@
-# Volunteer roles and roster
+# 🙋 Volunteer roles and roster
 
 ## Carnival directors
 
@@ -36,7 +36,7 @@
 |     Arena Set up (2)                           |     7.00am-8.00am Fedor/Marina                                                                        |     12.45pm-1.15pm - Fedor/Alex                                                                    |     7.30am-8.00am Fedor/Marina/Alex                                                                                                                             |
 |     Setting Controls   (2)                     |     7.00am- 8.30am - Cath / Eoin                                                                      |      12pm – 2pm -  Marina + Fedor (day before   carflutes)                                         |     5.30am-7.30am Marina +   Fedor                                                                                                                              |
 |     START Marshals   (2)                       |     9.00am-10.00am – Cath / Eoin                                                                      |     2pm-3pm  – Cath / Emily   (the last starter)                                                   |     9am-10am – Cath / Marina                                                                                                                                    |
-|     Maps printing                              |     12th October - Office                                                                             |     done                                                                                           |     done                                                                                                                                                        |
+|     Maps printing                              |     12th Oct - Office                                                                             |     done                                                                                           |     done                                                                                                                                                        |
 |     Towing OACT   Trailer                      |     Marina / Fedor (Friday from shed)                                                                 |     Marina / Fedor (from Cotter   Pines)                                                           |     Marina / Fedor (from Sparrow to shed)                                                                                                                       |
 |     Towing Toilets                             |     (Friday delivered by 5pm to Pinnacle     Move them from Sprint   to Middle –     Rohan            |     Move them from Pinnacle to Cotter Pines  -     Rohan                                           |     (Move them from Cotter Pines/home  and then to Sparrow Rohan     (they will be picked   up on Monday morning from Sparrow – return in front of the gate)    |
 |     Parking Marshalls   (2)                    |     7.30am-8.45am – Frank   and Ann Ingwersen                                                         |     12.30pm – 2.30pm  - Frank and Ann Ingwersen   (Assembly) \ Yuejia – main gate                  |     8am-9am - Frank and Ann Ingwersen                                                                                                                           |
