--- a/04.computers.md
+++ b/04.computers.md
@@ -1,4 +1,4 @@
-# IT setup and notes
+# 💻 IT setup and notes
 
 ## The team
 
@@ -9,6 +9,7 @@
 | Henry Gotzinger | | <tt>10111</tt> | MeOS |
 | Oliver Gotzinger | | <tt>00111</tt> | MeOS |
 | Owen Radajewski | | <tt>00001</tt> | MeOS |
+| Tate Needham | |  | meshO radio controls |
 
 - Availability indicated for WARM-UP, MASS, MIDDLE, SPRINT, LONG
 - [IT team WhatsApp group](https://chat.whatsapp.com/D8x4pE5UoyO8gaRAwYkL3r)
