--- a/01.schedule.md
+++ b/01.schedule.md
@@ -42,7 +42,7 @@
 | 16:00 - 18:30| Blue Lightning Stall 🧁 | Deirdre |
 | 16:00 - 19:00 | Mojo Bike Repairs 🔧 | Chris |
 | 16:30 - 17:00 | Stretching with Yoga for Posture 🧘 | Elena |
-| 17:00 - 18:00 | Start open for WARM-UP event | Start team |
+| 17:00 - 18:00 | 🚴‍♀️ **Start window for WARM-UP** | Start team |
 | 17:00 - 19:00 | Kids' tent 👦 | ? |
 | 18:30 - 21:30 | 🍷 Social Drinks at *The Verandah* at *Alivio Tourist Park* | [Location](https://maps.app.goo.gl/Wte5veujM1qiDF4T9) | |
 | 19:00 | WARM-UP course closure 🏁 | |
@@ -65,7 +65,7 @@
 | 16:00 - 19:30 | First-Aid officer 🚑 present | GetFirstAid |
 | 16:00 - 19:00 | Mojo Bike Repairs 🔧 | Chris |
 | 16:00 - 19:00 | Kids' tent 👦 | ? |
-| 16:30 - 17:00 | Start open for MASS event | |
+| 16:30 - 17:00 | 🚴‍♀️ **Start window for MASS** | Start team |
 | 18:45 | Presentation ceremony 🏆 for MASS | |
 | 19:00 | Course closure 🏁 | |
 | 19:21 | 🌅 Sunset | |
@@ -83,7 +83,7 @@
 | 7:30 - 9:30 | Come-and-try MTBO tent 🙋 | Toni, Raynie |
 | 8:00 - 12:00 | 📣 Commentator | Arpad |
 | 8:00 - 12:30 | Kids' tent 👦 | ? |
-| 8:30 - 10:00 | Start open for MIDDLE event | |
+| 8:30 - 10:00 | 🚴‍♀️ **Start window for MIDDLE** | Start team |
 | 9:00 - 12:00 | First-Aid officer 🚑 at te finish |  |
 | 9:30 - 12:00 | Massage 💆‍♀️ by Physio Sport | Cassandra |
 | 12:00 | Course closure 🏁, arena relocation | |
@@ -101,7 +101,7 @@
 | 13:30 - 16:30 | 📣 Commentator | Arpad |
 | 13:30 - 16:30 | Kids' tent 👦 | ? |
 | 13:45 - 16:30 | First-Aid officer 🚑 present | GetFirstAid |
-| 14:00 - 15:30 | Start open for SPRINT event | |
+| 14:00 - 15:30 | 🚴‍♀️ **Start window for SPRINT** | Start team |
 | 14:30 - 16:30 | Massage 💆‍♀️ by Physio Sport | Cassandra |
 | 16:30 | Course closure 🏁 | |
 | 19:22 | 🌅 Sunset | |
@@ -132,7 +132,7 @@ at **Harmonie German Club**
 | 8:30 - 12:30 | 📣 Commentator | Arpad |
 | 8:30 - 13:30 | Kids' tent 👦 | ? |
 | 9:00 - 13:00 | First-Aid officer 🚑 present | GetFirstAid |
-| 9:00 - 10:30 | Start open for LONG event | |
+| 9:00 - 10:30 | 🚴‍♀️ **Start window for LONG** | Start team |
 | 10:00 - 13:00 | Blue Lightning Stall 🧁 | Deirdre |
 | 13:30 | Course closure 🏁 | |
 | 12:30 | Presentation ceremony 🏆 for LONG | |
