--- a/04.computers.md
+++ b/04.computers.md
@@ -1,6 +1,6 @@
 # 💻 IT setup and notes
 
-## The team
+## IT team
 
 | Name | Contact| Availability | Role |
 |-|-|-:|-:|
@@ -13,6 +13,45 @@
 
 - Availability indicated for WARM-UP, MASS, MIDDLE, SPRINT, LONG
 - [IT team WhatsApp group](https://chat.whatsapp.com/D8x4pE5UoyO8gaRAwYkL3r)
+
+## IT schedule
+
+| **Oct 17, Thursday** | | |
+|--|--|--|
+| 14:00 - 15:00 | Arena setup | [Location](https://maps.app.goo.gl/RkufTrcQbvMn9bMF6) |
+
+| 15:00 | 🎪 Event center opens | [Location](https://maps.app.goo.gl/RkufTrcQbvMn9bMF6) |
+| 17:00 - 18:00 | 🚴‍♀️ WARM-UP start window | |
+| 19:00 | 🏁 Course closure | |
+| 18:30 - 21:30 | 🍷 Social Drinks at *The Verandah* at *Alivio Tourist Park* | [Location](https://maps.app.goo.gl/Wte5veujM1qiDF4T9) |
+
+| **Oct 18, Friday** | | |
+|--|--|--|
+| 15:00 | 🎪 Event center opens | [Location](https://maps.app.goo.gl/caWZitWLByRsVxT79) |
+| 16:30 - 17:00 | 🚴‍♀️ MASS start window | |
+| 19:00 | 🏁 Course closure | |
+| 18:45 | 🏆 Presentation ceremony for MASS | |
+
+| **Oct 19, Saturday** | | |
+|--|--|--|
+| 7:30 | 🎪 Event center opens | [Location](https://maps.app.goo.gl/2cXzt4ywia9G6Hj77) |
+| 8:30 - 10:00 | 🚴‍♀️ MIDDLE start window | |
+| 12:00 | 🏁 Course closure 🏁, arena relocation | |
+| 1 pm | 🎪 Event center opens | [Location](https://maps.app.goo.gl/PX7dE2mznda9W7Q49) |
+| 14:00 - 15:30 | 🚴‍♀️ SPRINT start window | |
+| 16:30 | 🏁 Course closure 🏁 | |
+| 18:30 - 21:30 | 🍷 DINNER at *Harmonie German Club* | [Location](https://maps.app.goo.gl/RzJVPCCobYroMax18) |
+| 19:30 | 🏆 Presentation ceremony for MIDDLE and SPRINT | |
+
+| **Oct 20, Sunday** | | |
+|--|--|--|
+| 8:00 | 🎪 Event center opens | [Location](https://maps.app.goo.gl/UvWwtsQ32WtoRC1T6) |
+| 9:00 - 10:30 | 🚴‍♀️ LONG start window | |
+| 12:30 | 🏆 Presentation ceremony for LONG | |
+| 13:30 | 🏁 Course closure | |
+
+See [schedule page](01.schedule.md) for all the details
+
 
 ## Computer tent setup
 
