--- a/09.course_setting.md
+++ b/09.course_setting.md
@@ -1,43 +1,21 @@
 # 🧭 Info for course setters
 
-## Allocation of control numbers
+## Allocation of control numbers for the events
 
-Units that we have:
-- OACT 31-69 (39 units) 70 has broken battery
-- OA  71-109 (40 units)
-- ONSW 190-203, 205-224, 300-304 (39 units) 
-
-
-Number of controls in each event:
-- 17:00 WARM-UP (20 Controls - confirmed) please allocate numbers!
-- 18:00 MASS (40 Controls - confirmed) please allocate numbers!
-- 7:00 MIDDLE (40 Controls - confirmed) Currently  Michael used 31-70 OACT
-- 19:00 SPRINT (47 Controls - confirmed). Currently Eoin and Cath used 101-146  - to give them OACT/ OAor ONSW numbers!!!
-- 8:00 LONG (40? Controls - TBA) please allocate numbers!
-
-## Allocation of control numbers
-
-| Event       | N of controls | Allocated numbers  | Control set       | Notes                                      |
-|-------------|---------------|--------------------|-------------------|--------------------------------------------|
-| WARM-UP     | 20            | 205-224            | ONSW              |                                            |
-| MASS        | 40            | 71-109, 300        | OA, ONSW          |                                            | 
-| MIDDLE      | 40            | 31-70              | OACT,             | Currently Michael used 31-70 OACT          |
-| SPRINT      | 47            | 71-109, 190-197    | OA, ONSW          | Currently Eoin and Cath used 101-146       |
-| LONG        | 40            | 31-70              | OACT              |                                            |
-
-## Units Available
-
-| Unit Group | Range                | Total Units | Notes                  |
-|------------|----------------------|-------------|------------------------|
-| OACT       | 31-70                | 40          | 70 has broken battery  |
-| OA         | 71-109               | 39          |                        |
-| ONSW       | 190-203, 205-224,    | 39          |                        |
-|            | 300-304              |             |                        |
+**BS11 units Available**
+| Set | Range | Quantity | Notes |
+|-|-:|:-:|-|
+| OACT | 31-70 | 40-1 | #70 bad battery |
+| OA | 71-109 | 39 | |
+| ONSW | 190-203<br/>205-224<br/>300-304 | 39 | |
 
 
-Number allocation:
-- WARM-UP (20 Controls) Controls 205-224 (ONSW set)
-- MASS    (40 Controls) Controls 71-109 (OA set) + 300 (ONSW set)
-- MIDDLE  (40 Controls) Controls 31-70 (OACT set)
-- SPRINT  (47 Controls) Controls 71-109 (OA set) + 190-197 (ONSW set)
-- LONG    (40 Controls) Controls 31-70 (OACT set)
+**Allocation to events**
+| Event | N of controls | Allocated numbers | Set | Comments |
+|-|:-:|-|-|-|
+| WARM-UP | 20 | 205-224 | ONSW | |
+| MASS | 40 | 71-109, 300 | OA, ONSW | + extra 190-203 and 205-224 ***check!*** |
+| MIDDLE | 40 | 31-70 | OACT, | |
+| SPRINT | 47 | 71-109, 190-197 | OA, ONSW | + extra 190-203 and 205-224 |
+| LONG | 40 | 31-70 | OACT | |
+
