More work on schedule

--- a/01.schedule.md
+++ b/01.schedule.md
@@ -32,21 +32,26 @@
 
 | When | What | Who |
 |--|--|--|
+| 6:18 | 🌅 Sunrise | |
 | 7:00 - 9:00 | Control setup | Marina, Ariadna |
 | by 14:00 | Toilets 🚻 arrive | Rohan |
-| 14:00 - 15:00 | Arena 🎪 setup <br/> Registration tent <br/> IT team tent <br/> Commentator tent | Fedor, Sergei <br/> Arena team <br/> IT team |
-| 14:30 | Parking officers are ready | ? |
+| 14:00 - 15:00 | Arena 🎪 setup <br/> Registration tent <br/> IT team tent <br/> Commentator tent | Fedor, Sergei <br/> `arena team` <br/> `IT team` |
+| 14:30 - 17:00 | Parking marshals 🚗 | `parking team` |
 | 15:00 | Event center opens 🎪 |  |
 | 16:00 - 18:00 | 📣 Commentator | Arpad |
 | 16:00 - 18:00 | Come-and-try MTBO tent 🙋 | Toni, Raynie |
 | 16:00 - 18:30| Blue Lightning Stall 🧁 | Deirdre |
 | 16:00 - 19:00 | Mojo Bike Repairs 🔧 | Chris |
 | 16:30 - 17:00 | Stretching with Yoga for Posture 🧘 | Elena |
-| 17:00 - 18:00 | 🚴‍♀️ **Start window for WARM-UP** | Start team |
+| 17:00 - 18:00 | 🚴‍♀️ **Start window for WARM-UP** | `start team` |
 | 17:00 - 19:00 | Kids' tent 👦 | ? |
 | 18:30 - 21:30 | 🍷 Social Drinks at *The Verandah* at *Alivio Tourist Park* | [Location](https://maps.app.goo.gl/Wte5veujM1qiDF4T9) | |
 | 19:00 | WARM-UP course closure 🏁 | |
+| 19:00 - 20:00 | Control collection | Marina, ? |
+| 19:00 - 20:00 | Arena 🎪 pack up | Sergei, `arena team` |
 | 19:20 | 🌅 Sunset | |
+| 21:00 | Permit for Bruce Ridge expires | |
+| by 21:00 | Publish results 🧾 for WARM-UP | Marina, Fedor |
 | 22:00 | Charge up batteries and power banks 🔋 | Fedor |
 
 
@@ -56,7 +61,11 @@
 
 | When | What | Who |
 |--|--|--|
+| 6:17 | 🌅 Sunrise | |
+| 12:00 - 15:00 | Control setup | Cathy, Belinda, Jo, Susie, Alison |
 | by 14:00 | Toilets 🚻 arrive | Rohan |
+| 14:00 - 15:00 | Arena 🎪 setup <br/> Registration tent <br/> IT team tent <br/> Commentator tent | Fedor, Sergei <br/> `arena team` <br/> `IT team` |
+| 14:30 - 16:15 | Parking and traffic marshals 🚗 | `parking team` |
 | 15:00 | Event center opens 🎪 |  |
 | 15:00 - 19:00 | Coffee van ☕️ | KDS coffee |
 | 15:30 - 16:00 | Stretching with Yoga for Posture 🧘 | Elena |
@@ -65,10 +74,15 @@
 | 16:00 - 19:30 | First-Aid officer 🚑 present | GetFirstAid |
 | 16:00 - 19:00 | Mojo Bike Repairs 🔧 | Chris |
 | 16:00 - 19:00 | Kids' tent 👦 | ? |
-| 16:30 - 17:00 | 🚴‍♀️ **Start window for MASS** | Start team |
-| 18:45 | Presentation ceremony 🏆 for MASS | |
+| 16:30 - 17:00 | 🚴‍♀️ **Start window for MASS** | `start team` |
+| 17:15 - 19:00 | Traffic marshals 🚗 | `parking team` |
+| Aprx. 18:45 | Presentation ceremony 🏆 for MASS | Marina, Veronika, Cathy, Belinda |
 | 19:00 | Course closure 🏁 | |
+| 19:00 - 20:00 | Arena 🎪 pack up | `arena team` |
+| 19:00 - 20:00 | Control collection | Cathy, Belinda, Jo, Susie, Alison |
 | 19:21 | 🌅 Sunset | |
+| by 21:00 | Publish official results 🧾 for MASS | Marina, Fedor |
+| 21:00 | Permit for West Stromlo expires | |
 | 22:00 | Charge up batteries and power banks 🔋 | Fedor |
 
 ## Oct 19, Saturday, MIDDLE
@@ -77,16 +91,24 @@
 
 | When | What | Who |
 |--|--|--|
+| 6:16 | 🌅 Sunrise | |
+| 6:00 - 8:00 | Control setup | Michael, Emily, Tom, Emily, Matt |
+| 7:00 - 10:00 | Parking and traffic marshals 🚗 to start | `parking team` |
 | 7:30 | Event center opens 🎪 |  |
 | 7:30 - 11:00 | Coffee van ☕️ | KDS coffee |
 | 7:30 - 12:00 | Mojo Bike Repairs 🔧 | Chris |
 | 7:30 - 9:30 | Come-and-try MTBO tent 🙋 | Toni, Raynie |
 | 8:00 - 12:00 | 📣 Commentator | Arpad |
 | 8:00 - 12:30 | Kids' tent 👦 | ? |
-| 8:30 - 10:00 | 🚴‍♀️ **Start window for MIDDLE** | Start team |
+| 8:30 - 10:00 | 🚴‍♀️ **Start window for MIDDLE** | `start team` |
 | 9:00 - 12:00 | First-Aid officer 🚑 at te finish |  |
+| 9:00 - 12:00 | Traffic marshals 🚗 from finish | `parking team` |
 | 9:30 - 12:00 | Massage 💆‍♀️ by Physio Sport | Cassandra |
-| 12:00 | Course closure 🏁, arena relocation | |
+| 12:00 | Course closure 🏁 | |
+| 12:00 - 14:00 | Control collection | Michael, Emily, Tom, Emily, Matt |
+| 12:00 - 12:45 | Arena relocation 🎪 | Fedor, Sergei, `arena team` |
+| 13:00 | Permit for Jerrabomberra Community center expires | |
+| by 14:00 | Publish official results 🧾 for MIDDLE | Marina, Fedor |
 
 ## Oct 19, Saturday, SPRINT
 
@@ -94,16 +116,21 @@
 
 | When | What | Who |
 |--|--|--|
-| 13:00 | Event center opens 🎪 |  |
+| 10:00 - 13:00 | Control setup | Eoin, Cath |
+| 12:30 - 14:00 | Parking marshals 🚗 | `parking team` |
+| 13:00 | Event center opens 🎪 | |
 | 13:00 - 16:00 | Blue Lightning Stall 🧁 | Deirdre |
 | 13:00 - 16:00 | Mojo Bike Repairs 🔧 | Chris |
 | 13:30 - 15:00 | Come-and-try MTBO tent 🙋 | Toni, Raynie |
 | 13:30 - 16:30 | 📣 Commentator | Arpad |
 | 13:30 - 16:30 | Kids' tent 👦 | ? |
 | 13:45 - 16:30 | First-Aid officer 🚑 present | GetFirstAid |
-| 14:00 - 15:30 | 🚴‍♀️ **Start window for SPRINT** | Start team |
+| 14:00 - 15:30 | 🚴‍♀️ **Start window for SPRINT** | `start team` |
 | 14:30 - 16:30 | Massage 💆‍♀️ by Physio Sport | Cassandra |
 | 16:30 | Course closure 🏁 | |
+| 16:30 - 17:00 | Control collection | Eoin, Cath, 3? |
+| 17:30 | Permit for Sutton Road Driving center expires | |
+| by 18:30 | Publish official results 🧾 for SPRINT | Marina, Fedor |
 | 19:22 | 🌅 Sunset | |
 
 ## Oct 19, DINNER 🍾 🥂 🎉 
@@ -114,7 +141,7 @@ at **Harmonie German Club**
 | When | What | Who |
 |--|--|--|
 | 18:30 | Dining commences 🍽 | by registration |
-| 19:30 | Presentation ceremony 🏆 🏆 for MIDDLE and SPRINT | everyone welcome |
+| 19:30 | Presentation ceremony 🏆 🏆 for MIDDLE and SPRINT | Marina, Veronika, Fedor,<br/>Michael, Emily, Tom, Emily,<br/>Cath, Eoin |
 | 21:45 | Dinner concludes | |
 | 22:00 | Charge up batteries and power banks 🔋 | Fedor |
 
@@ -124,7 +151,11 @@ at **Harmonie German Club**
 
 | When | What | Who |
 |--|--|--|
+| 5:30 - 7:30 | Control setup | Marina, Fedor |
+| 6:14 | 🌅 Sunrise | |
 | by 7:30 | Toilets 🚻 arrive | Rohan |
+| 7:30 | Kowen forest gates open for public | `parking team` |
+| 7:30 - 9:30 | Parking marshals 🚗 | `parking team` |
 | 7:30 - 9:00 | Coffee van ☕️ | KDS coffee |
 | 8:00 | Event center opens 🎪 |  |
 | 8:00 - 10:00 | Mojo Bike Repairs 🔧 | Chris |
@@ -132,10 +163,14 @@ at **Harmonie German Club**
 | 8:30 - 12:30 | 📣 Commentator | Arpad |
 | 8:30 - 13:30 | Kids' tent 👦 | ? |
 | 9:00 - 13:00 | First-Aid officer 🚑 present | GetFirstAid |
-| 9:00 - 10:30 | 🚴‍♀️ **Start window for LONG** | Start team |
+| 9:00 - 10:30 | 🚴‍♀️ **Start window for LONG** | `start team` |
 | 10:00 - 13:00 | Blue Lightning Stall 🧁 | Deirdre |
+| Aprx. 12:30 | Presentation ceremony 🏆 for LONG | Marina, Veronika, Fedor |
 | 13:30 | Course closure 🏁 | |
-| 12:30 | Presentation ceremony 🏆 for LONG | |
+| 13:30 - 15:30 | Control collection | 6? |
+| 16:00 | Kowen forest gates locked | |
+| 16:30 | Permit for Kowen forest expires | |
+| by 17:30 | Publish official results 🧾 for LONG | Marina, Fedor |
 | 19:23 | 🌅 Sunset | |
 | 22:00 | Charge up batteries and power banks 🔋 | Fedor |
 
