--- a/02.people.md
+++ b/02.people.md
@@ -1,6 +1,6 @@
 # 🙋 Volunteer roles and roster
 
-## Carnival directors
+## Central roles
 
 - Marina Iskhakova - Event Director - `0412308310`
 - Fedor Iskhakov - Technical Director - `0434019571`
@@ -20,9 +20,28 @@
 - IT team
 - Start team
 
+#### Parking teams
+
+| Event | Setup | Collection |
+|:-|-:|-:|
+| WARM-UP | | |
+| MASS | | |
+| MIDDLE | | |
+| SPRINT | | |
+| LONG | | |
+
+#### Controls teams
+
+| Event | Setup | Collection |
+|:-|-:|-:|
+| WARM-UP | Marina<br/>Ariadna | Marina<br/>3? |
+| MASS | Cathy<br/>Belinda<br/>Jo Allison<br/>Susie Kluth<br/>Alison Inglis | Cathy<br/>Belinda<br/>Jo Allison<br/>Susie Kluth<br/>Alison Inglis |
+| MIDDLE | Michael<br/>Emily<br/>Tom<br/>Emily<br/>Matt Shadwell | Michael<br/>Emily<br/>Tom<br/>Emily<br/>Matt Shadwell |
+| SPRINT | Eoin<br/>Cath | Eoin<br/>Cath<br/>2? |
+| LONG | Marina<br/>Fedor | 6? |
+
+
 ## Volunteers
-
-
 
 
 |     Role                                       |     14 OCT,   SPRINT, START 9.00-10.00am     Finish   closure 11.00am                                 |     14 OCT,   MIDDLE, START 2pm-3pm     Finish   closure 5:00pm                                    |     15 OCT,   LONG, START 9:00-10:00am     Finish   closure 1:00pm                                                                                              |
